fix overflow-button in card-footer

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -311,3 +311,7 @@ footer ul {
         display: grid;
     }
 }
+
+.card-footer .btn {
+    max-width: 100%;
+}
